Fixed an old typo in my lastname that was there for years!

--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 PTlink IRC Services 3
 =====================
 Joao Pinto, Lamego at pt-link.net, Project Manager and Core Developer
-Jacques Wweewer, stinger at ircworld.nl, Support Developer
+Jacques Weewer, stinger at ircworld.nl, Support Developer
 Felipe, Openglx at starbyte,net, Support Developer
 
 Building, configuration and running
